platform/sbo/sbo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata: 
  name: sbo-ingress
  annotations: 
    kubernetes.io/ingress.class: nginx 
spec: 
  rules: 
    - host: sbo.{HOST_NAME}
      http: 
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: application-live-view-server
              port:
                number: 5112
